fix(habit-modal): fix habit targets pane heatmap jumps

--- a/frontend/src/styles/_modal.scss
+++ b/frontend/src/styles/_modal.scss
@@ -187,7 +187,7 @@
 
 .modal-details-habit-targets-wrapper {
   display: grid;
-  height: 393px;
+  height: 394px;
   gap: 10px;
   grid-template-columns: 1fr;
   grid-auto-rows: 40px;
